--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,9 @@
       </div>
     </div>
   </div>
-  <button id="refresh-button">Refresh Token</button>
-  <button id="logout-button">Log out</button>
+  <button id="refresh-button">Refresh</button>
+  <button id="logout-button">Logout</button>
 
-  <script src="token.js"></script>
   <script src="auth.js"></script>
   <script src="player.js"></script>
 </body>
