--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div id="song-container" style="display: none;">
-      <img id="album-art" src="icons/missing-song.png" alt="Album art"/>
+      <div id="album-art" alt="Album art"></div>
       <input type="range" id="song-slider" min="0" max="100" value="0">
       <div id="song-time">
         <p id="current-time">0:00</p>
@@ -38,8 +38,12 @@
       </div>
       <div id="info-and-like">
         <div id="song-info">
-          <p id="song-name"></p>
-          <p id="artist-name"></p>
+          <div class="song-name-container">
+            <p id="song-name"></p>
+          </div>
+          <div class="artist-name-container">
+            <p id="artist-name"></p>
+          </div>
         </div>
         <button id="like-button">
           <img id="like-button-icon" class="control-icon" src="icons/like-button.png" alt="Like"/>
@@ -47,33 +51,41 @@
       </div>
       <div id="controls-container">
         <div id="song-controls">
-          <button id="shuffle-button" class="song-controls">
-            <img id="shuffle-button-icon" class="control-icon" src="icons/shuffle-button.png" alt="Shuffle"/>
-          </button>
-          <button id="previous-button" class="song-controls">
-            <img id="previous-button-icon" class="control-icon" src="icons/previous-button.png" alt="Previous"/>
-          </button>
-          <button id="play-button" class="song-controls">
-            <img id="play-button-icon" class="control-icon" src="icons/play-button.png" alt="Play"/>
-          </button>
-          <button id="next-button" class="song-controls">
-            <img id="next-button-icon" class="control-icon" src="icons/next-button.png" alt="Next"/>
-          </button>
-          <button id="repeat-button" class="song-controls">
-            <img id="repeat-button-icon" class="control-icon" src="icons/repeat-button.png" alt="Repeat"/>
-          </button>
+            <button id="shuffle-button" class="song-controls">
+              <img id="shuffle-button-icon" class="control-icon" src="icons/shuffle-button.png" alt="Shuffle"/>
+            </button>
+            <button id="previous-button" class="song-controls">
+              <img id="previous-button-icon" class="control-icon" src="icons/previous-button.png" alt="Previous"/>
+            </button>
+            <button id="play-button" class="song-controls">
+              <img id="play-button-icon" class="control-icon" src="icons/play-button.png" alt="Play"/>
+            </button>
+            <button id="next-button" class="song-controls">
+              <img id="next-button-icon" class="control-icon" src="icons/next-button.png" alt="Next"/>
+            </button>
+            <button id="repeat-button" class="song-controls">
+              <img id="repeat-button-icon" class="control-icon" src="icons/repeat-button.png" alt="Repeat"/>
+            </button>
+          <div id="menu-button" class="song-controls">
+            <img id="menu-button-icon" class="control-icon" src="icons/menu-button.png" alt="Menu"/>
+            <div id="menu-options">
+              <button id="refresh-button">Refresh</button>
+              <button id="logout-button">Logout</button>
+            </div>
+          </div>
         </div>
         <div id="volume-controls">
           <button id="volume-button" class="song-controls">
             <img id="volume-button-icon" class="control-icon" src="icons/volume-button.png" alt="Volume"/>
           </button>
           <input type="range" id="volume-slider" min="0" max="100" value="0">
+          
         </div>
       </div>
     </div>
   </div>
-  <button id="refresh-button">Refresh</button>
-  <button id="logout-button">Logout</button>
+
+
 
   <script src="auth.js"></script>
   <script src="player.js"></script>
